Map.of is not supported in java 8